# ECS

./: CMakeLists.txt
Component/: anchorpointcomponent.cpp  componentmanager.cpp  entityinformationcomponent.cpp  texturecomponent.cpp
ECS/: ECS.h
ECS/Component/: component.h  componentfactory.h  componentmanager.h  entityinformationcomponent.h
ECS/Entity/: entity.h  entitymanager.h
ECS/System/: glRendering.h  glRendering_loader.h  glRendering_material.h  glRendering_vaomap.h  kinematics.h  rendering.h  sceneresourcer.h
Entity/: entityfactory.cpp
System/: glRendering.cpp  glRendering.h  glRendering_loader.cpp  glRendering_material.cpp  glRendering_vaomap.cpp  kinematics.cpp  rendering.cpp  sceneresourcer.cpp
